...
                                            <constraint firstAttribute="height" constant="50" id="xFA-n8-5ci"/>
                                        </constraints>
                                        <state key="normal" title="Sign in">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                <rect key="frame" x="20" y="356" width="374" height="110"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFit" contentHorizontalAlignment="leading" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oR8-qT-AX3" customClass="CustomTextField" customModule="ParkinSense" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                        <constraints>
...
                                        </variation>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WPp-J7-yNK" customClass="CustomTextField" customModule="ParkinSense" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="60" width="374" height="50"/>
                                        <constraints>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="124" height="40"/>
                                                        <color key="backgroundColor" red="0.89803921568627454" green="0.89803921568627454" blue="0.89803921568627454" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                        <state key="normal" image="uncheckbox"/>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="imageView.contentMode">
...
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Bubble Pop">
                                                            <attributes>
                                                                <color key="NSColor" red="0.56215727329999998" green="0.58859437699999995" blue="0.65689939259999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                                                </connections>
                                            </button>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weekly Progress" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6GE-9q-l9U">
                                                <rect key="frame" x="111.5" y="308" width="195.5" height="30"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="33"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="33"/>
                                <state key="normal" title="Quit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
